@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: tables.c,v 1.83 2008/06/01 04:30:59 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: tables.c,v 1.84 2008/06/01 06:11:24 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - tables.c */
@@ -229,6 +229,8 @@ const struct gen_table set_tbl[] =
     { "pm$3d", S_PM3D },
     { "pal$ette", S_PALETTE },
     { "colorb$ox", S_COLORBOX },
+    { "colorn$ames", S_COLORNAMES },
+    { "colors", S_COLORNAMES },
     { "p$lot", S_PLOT },
     { "poi$ntsize", S_POINTSIZE },
     { "pol$ar", S_POLAR },
@@ -583,7 +585,7 @@ const struct gen_table show_style_tbl[] =
 {
     { "d$ata", SHOW_STYLE_DATA },
     { "f$unction", SHOW_STYLE_FUNCTION },
-    { "l$ine", SHOW_STYLE_LINE },
+    { "l$ines", SHOW_STYLE_LINE },
     { "fill", SHOW_STYLE_FILLING },
     { "fs", SHOW_STYLE_FILLING },
     { "ar$row", SHOW_STYLE_ARROW },
