@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.65 2008/06/01 04:30:59 sfeam Exp $
+ * $Id: tables.h,v 1.66 2008/06/01 06:11:24 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -89,7 +89,7 @@ enum set_id {
     S_MY2TICS, S_NOMY2TICS, S_MYTICS, S_NOMYTICS,
     S_MZTICS, S_NOMZTICS,
     S_OFFSETS, S_ORIGIN, SET_OUTPUT, S_PARAMETRIC,
-    S_PALETTE, S_PM3D, S_COLORBOX,
+    S_PALETTE, S_PM3D, S_COLORBOX, S_COLORNAMES,
     S_CBLABEL, S_CBRANGE, S_CBTICS, S_NOCBTICS, S_MCBTICS, S_NOMCBTICS,
     S_CBDATA, S_CBDTICS, S_NOCBDTICS, S_CBMTICS, S_NOCBMTICS,
     S_OBJECT, S_PLOT, S_POINTSIZE, S_POLAR, S_PRINT,
